Add reaction and reactionParser stuff. Currently can read in a reversible reaction with no third body with arrhenius coeffs.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(chemkinReader
             transport.cpp
             species.cpp
             thermo.cpp 
+            reaction.cpp
             thermoParser.cpp 
             transportParser.cpp
             reactionParser.cpp
